# coinfosim

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  coinfosim.toml.example  coinfosim_arm_reports_repair_handoff_v2.md  coinfosim_research_proposal_v4.tex  index.html  parallel_monte_carlo_implementation_plan.md  pyproject.toml  report_improv_tasks.md  requirements.txt  setup.py  support2_random_forest_tasks_plan.md  tasks_report_new_metrics.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  package.yml  publish-pages.yml  publish-pypi.yml  publish-testpypi.yml  update-reports-pages-index.yml
coinfosim-presentation/: Makefile  README.md  presentation-notes.tex  presentation.aux  presentation.bbl  presentation.bcf  presentation.blg  presentation.nav  presentation.out  presentation.run.xml  presentation.tex  presentation.toc  references.bib  roteiro_apresentacao.md
coinfosim-presentation/config/: commands.tex  theme.tex
coinfosim-presentation/scripts/: generate_air_quality_gnb_curves.py  generate_air_quality_gnb_progressive_metrics.py  generate_full_scale_metric_curves.py
coinfosim-presentation/slides/: backup.tex  main.tex
coinfosim-report-latex/: .gitignore  MANIFEST.txt  README.md  REVISION_LOG.md  latexmkrc  main.aux  main.bbl  main.bcf  main.bcf-SAVE-ERROR  main.blg  main.lof  main.lot  main.run.xml  main.tex  main.toc
coinfosim-report-latex/appendices/: apendice_a_resultados.tex  apendice_b_reprodutibilidade.tex  apendice_c_modelos.tex  apendice_d_formalizacao.tex  apendice_e_proveniencia.tex  (+2 more)
data/: README.md
datasets/: manifest.json
docs/: CONFIG_DESIGN.md  PUBLISHING.md  cli.md  datasets.md  installation.md  migration-cli-0.2.md  migration-predictive-profile-schema.md  releasing.md
ontology/: coinfosim.owl.ttl
provenance/: README.md
scripts/: benchmark_parallel_monte_carlo.py  calibrate_support2_random_forest.py  inventory_recovered_reports.py  publish_output_to_pages.sh  run_air_quality_scenario.py  run_occupancy_scenario.py  run_support2_scenario.py  setup_pages.sh  validate_predictive_profile_refactor.py
test/: test_config.py
tests/: conftest.py  test_accumulator_integrity.py  test_air_quality_anchored_models.py  test_air_quality_dataset_report.py  test_air_quality_loader.py  test_air_quality_monte_carlo_reports.py  test_air_quality_scenario_report.py  test_air_quality_scenario_runner.py  test_ci_workflows.py  test_classifier_selection.py  test_cli_app.py  test_cli_config_commands.py  test_cli_dataset_commands.py  test_cli_doctor.py  test_cli_legacy_commands.py  test_cli_publish.py  test_cli_run_commands.py  test_cli_scenario_commands.py  test_cooperative_progress.py  test_dataset_anchored_models.py  test_dataset_catalog.py  test_dataset_download.py  test_dataset_integrity.py  test_dataset_raw_files.py  test_dataset_resolver.py  test_docs_structure.py  test_execution.py  test_execution_metadata.py  test_full_scale_config.py  test_full_scale_dataset_resolution.py  test_gmm_sampler.py  test_monte_carlo_with_real_sampler.py  test_occupancy_monte_carlo_reports.py  test_occupancy_run_tracking.py  test_occupancy_scenario_report.py  test_ontology.py  test_packaging_metadata.py  test_parallel_sampler_equivalence.py  test_parallel_scientific_equivalence.py  test_predictive_profile_metrics.py  (+30 more)
(+372 files in other folders)
