[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coinfosim"
version = "0.2.0"
description = "CoInfoSim: a simulator for cooperative classification from multiple information channels."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Paulo Azevedo", email = "paulorenatoaz@dcc.ufrj.br" },
]
keywords = [
    "classification",
    "cooperative-classification",
    "monte-carlo",
    "simulation",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    # Core scientific stack
    "numpy>=1.19.5",
    "matplotlib>=3.3.3",
    "plotly>=5.0.0",
    "shapely>=2.0.1",
    "ipython>=7.34.0",
    "scikit-learn>=1.2.2",
    "scipy>=1.10.1",
    "threadpoolctl>=3.1.0",
    "Pillow>=8.1.0",
    "pandas>=1.5.3",
    "tabulate>=0.9.0",
    "reportlab>=4.0.4",

    # CLI, configuration, and dataset distribution
    "tomli>=2.0.0;python_version<\"3.11\"",  # TOML support (built-in in 3.11+)
    "platformdirs>=3.0.0",                   # Cross-platform config/cache paths
    "typer>=0.12.0",                         # CLI framework (rich is a core dep since 0.12)
]

[project.optional-dependencies]
legacy = [
    # Deprecated Google Drive/Sheets integration
    "pygsheets>=2.0.6",
    "google-api-python-client>=2.83.0",
    "cryptography>=41.0.2",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
    "pyyaml>=6.0.0",  # only for tests/test_ci_workflows.py's workflow-structure checks
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
coinfosim = "coinfosim.cli:main"

[project.urls]
Homepage = "https://paulorenatoaz.github.io/coinfosim/"
Repository = "https://github.com/paulorenatoaz/coinfosim"
Issues = "https://github.com/paulorenatoaz/coinfosim/issues"
Documentation = "https://paulorenatoaz.github.io/coinfosim/"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"coinfosim.resources" = ["*.json"]

[tool.pytest.ini_options]
markers = [
    "slow: exercises a real (tiny) end-to-end Monte Carlo run rather than mocks",
]
